feat: ability to watch endpoints
