# f2soperator/routes/main.go
@@ -45,6 +45,7 @@ func HandleRequests(config *config.F2SConfiguration, wg *sync.WaitGroup) {
 	router.HandleFunc("/functions/{id}", deleteFunction).Methods(http.MethodDelete)
 	router.HandleFunc("/deployments", getAllDeployments).Methods(http.MethodGet)
 	router.HandleFunc("/services", getAllServices).Methods(http.MethodGet)
+	router.HandleFunc("/endpoints", getAllEndpoints).Methods(http.MethodGet)
 	router.HandleFunc("/deployments", createDeployment).Methods(http.MethodPost)
 	router.HandleFunc("/invoke/{target}", invokeFunction)
 	router.HandleFunc("/prometheus/{functionname}/{metricname}", getPrometheusMetric)
